# resiter

./: .editorconfig  .gitlint  .licenserc.json  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.builds/: debian.yml  rust121.yml  rust130.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: block-fixup.yml  ci.yml
src/: and_then.rs  and_then_filter.rs  and_then_x.rs  errors.rs  filter.rs  filter_map.rs  filter_map_x.rs  filter_x.rs  flat_map.rs  flat_map_x.rs  flatten.rs  flatten_x.rs  lib.rs  map.rs  map_x.rs  ok_or_else.rs  oks.rs  onerr.rs  onok.rs  prelude.rs  try_filter.rs  try_filter_map.rs  try_map.rs  unwrap.rs  util.rs  while_ok.rs
