[package]
name = "resiter"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Dawid Ciężarkiewicz <dpc@dpc.pw>"]

description = "Helper crate for handling iterators over result"

keywords    = ["iterator", "result", "util"]
readme      = "README.md"
license     = "MPL-2.0"

documentation = "https://docs.rs/resiter"
repository    = "https://github.com/matthiasbeyer/resiter"

[dependencies]
