[package]
name = "resiter"
version = "0.5.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Dawid Ciężarkiewicz <dpc@dpc.pw>",
           "Joakim Ohlrogge <joakim.ohlrogge@gmail.com>"]

description = "Helper crate for handling iterators over result"

keywords    = ["iterator", "result", "util"]
categories  = ["algorithms", "no-std", "rust-patterns"]
readme      = "README.md"
license     = "MPL-2.0"

documentation = "https://docs.rs/resiter"
repository    = "https://git.beyermatthi.as/resiter"

[dependencies]
